# shipay-challenge

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.toml
shipay/: app_factory.py  exceptions.py  extensions.py  wsgi.py
shipay/api/: resources.py
shipay/controllers/: __init__.py  claim.py  role.py  user.py  user_claim.py
shipay/db/repositories/: __init__.py  claim.py  role.py  user.py  user_claim.py
shipay/exs/: ex1.sql  ex2.py  ex6.txt  ex8.txt
shipay/models/: __init__.py  claim.py  role.py  user.py  user_claim.py
shipay/utils/: password_generator.py
tests/: conftest.py  test_shipay.py
tests/functional/: test_api.py
tests/unit/: test_app.py  test_models.py
